--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,9 @@ on:
       - '**'
       # - $default-branch
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
   build:
     env:
@@ -52,10 +55,19 @@ jobs:
 
   docker:
     runs-on: ubuntu-20.04
+    permissions:
+      contents: read
+      packages: write
     steps:
 
     - name: Check out code
       uses: actions/checkout@v3
+  
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ github.repository }}
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
@@ -64,6 +76,17 @@ jobs:
       id: buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Docker Build
-      run: |
-        make docker
+    - name: Login to container registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        platforms: linux/amd64
+        labels: ${{ steps.meta.outputs.labels }}
+        tags: ${{ steps.meta.outputs.tags }}
